--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-add",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Create custom react components using cli",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,9 @@
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "inquirer": "^6.2.1",
-    "log-symbols": "^2.2.0"
+    "log-symbols": "^2.2.0",
+    "node-sass": "^4.11.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1"
   }
 }
